== In Git

== Bugfixes
* Step definition snippets for Java look crazy. (#49 Aslak Hellesøy)
* Java snippets for multiline strings incorrectly suggest table. (#51 Aslak Hellesøy)
* Improved UTF-8. Make sure you compile your stepdefs with -encoding UTF-8 and save feature files in UTF-8 (Aslak Hellesøy)

== New Features
* Upgrade examples to Groovy 1.6.7, which removes the need for dirty hacks to get tagged hooks working. (Aslak Hellesøy)
* Upgrade examples to Ant 1.7.1. (Aslak Hellesøy)
* Cuke4Duke no longer depends on an exact version of cucumber, but rather >= (equal or greater) (Mike Gaffney)
* jvmArgs with empty values are now stripped. Comes in handy when adding empty properties in a <jvmArg>
  in the pom. Makes it possible to add extra jvmArgs via pom profiles (Torbjørn Vatn)
* Added optional parameter failOnError, so Maven build can be made to look successful, even when there are 
  Cucumber test failures. This can be useful on a continuous integration server, if your only option to be able to 
  collect output files is if the project builds successfully. (Hugo Josefson)

== 0.1.9

This release sports much improved Before and After hooks in several areas. You can now construct more complex
boolean queries with tagged hooks. This is featured in Cucumber 0.4.4. You *must* upgrade to Cucumber 0.4.4
with this release.

For these examples this resolves to the following boolean query: (@important && @customer) || @super-important.
A comma in a String is a &&, a comma between arguments is a ||.

=== New Features
* Ability to order Java annotation hooks with @Order. (#39 Aslak Hellesøy)
* Support for boolean tag logic in Before and After hooks just like in Ruby Cucumber. (Aslak Hellesøy)
* Added Before and After hooks to Clojure. (Stu Halloway and Aslak Hellesøy)
* Simplified the WebDriverFacade in the Java WebDriver example. (Aslak Hellesøy)

=== Bugfixes