@@ -5,7 +5,6 @@ import cuke4duke.internal.jvmclass.ClassLanguage;
 import cuke4duke.internal.jvmclass.ObjectFactory;
 import cuke4duke.internal.language.AbstractStepDefinition;
 import cuke4duke.internal.language.JdkPatternArgumentMatcher;
-import cuke4duke.internal.language.MethodInvoker;
 import cuke4duke.internal.language.StepArgument;
 
 import java.io.UnsupportedEncodingException;
@@ -14,17 +13,19 @@ import java.util.List;
 import java.util.regex.Pattern;
 
 public class JavaStepDefinition extends AbstractStepDefinition {
-    private final Pattern regexp;
-    private final MethodInvoker methodInvoker;
     private final ObjectFactory objectFactory;
     private final Method method;
+    private final Pattern regexp;
+    private final MethodInvoker methodInvoker;
+    private final MethodFormat methodFormat;
 
-    public JavaStepDefinition(ClassLanguage programmingLanguage, ObjectFactory objectFactory, Method method, Pattern regexp) throws Throwable {
+    public JavaStepDefinition(ClassLanguage programmingLanguage, ObjectFactory objectFactory, Method method, Pattern regexp, MethodFormat methodFormat) throws Throwable {
         super(programmingLanguage);
         this.objectFactory = objectFactory;
         this.method = method;
-        methodInvoker = new MethodInvoker(method);
         this.regexp = regexp;
+        this.methodFormat = methodFormat;
+        this.methodInvoker = new MethodInvoker(method);
         register();
     }
 
@@ -37,7 +38,7 @@ public class JavaStepDefinition extends AbstractStepDefinition {
     }
 
     public String file_colon_line() {
-        return method.toGenericString();
+        return methodFormat.format(method);
     }
 
     protected Class<?>[] getParameterTypes(Object[] args) {
